@@ -39,8 +39,6 @@ public:
 	QVariant
 	data(const QModelIndex &index, int role = Qt::DisplayRole) const override;
 
-	Qt::ItemFlags flags(const QModelIndex &index) const override;
-
 	QModelIndex parent(const QModelIndex &index) const override;
 
 	QModelIndex index(
